完善校验model是否已发布,checkModelStatus接口